--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express-session": "^1.17.1",
     "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
+    "moment": "^2.28.0",
     "mongoose": "^5.10.5",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
