--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "method-override": "^3.0.0",
     "moment": "^2.28.0",
     "mongoose": "^5.10.5",
+    "node-schedule": "^1.3.2",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "slugify": "^1.4.5",
